--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <pre><center>
-<title>repo.me</title> <!-- Change this to your alias or repo name! -->
-<h1>repo.me</h1> <!-- Change this to your alias or repo name! -->
-<li>Add to <a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://REPLACEHERE">Cydia</a></li> <!-- Put your repo URL in REPLACEHERE, remove this comment. -->
-<li>Add to <a class="btn btn-sm btn-default" href="installer://add/https://REPLACEHERE">Installer</a></li> <!-- Put your repo URL in REPLACEHERE, remove this comment. -->
-<li>Add to <a class="btn btn-sm btn-default" href="sileo://source/https://REPLACEHERE">Sileo</a></li> <!-- Put your repo URL in REPLACEHERE, remove this comment. -->
-<li>Add to <a class="btn btn-sm btn-default" href="zbra://sources/add/https://REPLACEHERE">Zebra</a></li> <!-- Put your repo URL in REPLACEHERE, remove this comment. -->
-thanks for using <a class="btn btn-sm btn-default" href="https://github.com/syns/repo.me">repo.me</a> by syns! <!-- This can be removed, but I'd appreciate if this was left or edited to still include the link to repo.me! -->
+<title>Menthe</title> <!-- Change this to your alias or repo name! -->
+<h1>Menthe</h1> <!-- Change this to your alias or repo name! -->
+<li>Add to <a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://close.cf">Cydia</a></li> <!-- Put your repo URL in REPLACEHERE, remove this comment. -->
+<li>Add to <a class="btn btn-sm btn-default" href="installer://add/https://close.cf">Installer</a></li> <!-- Put your repo URL in REPLACEHERE, remove this comment. -->
+<li>Add to <a class="btn btn-sm btn-default" href="sileo://source/https://close.cf">Sileo</a></li> <!-- Put your repo URL in REPLACEHERE, remove this comment. -->
+<li>Add to <a class="btn btn-sm btn-default" href="zbra://sources/add/https://close.cf">Zebra</a></li> <!-- Put your repo URL in REPLACEHERE, remove this comment. -->
+Created with repo.me | Thank you for using <a class="btn btn-sm btn-default" href="https://github.com/v4lex/repo">Menthe</a> by valex! <!-- This can be removed, but I'd appreciate if this was left or edited to still include the link to repo.me! -->
 </center></pre>
