--- a/index.html
+++ b/index.html
@@ -1,9 +1,28 @@
-<pre><center>
-<title>Menthe</title> <!-- Change this to your alias or repo name! -->
-<h1>Menthe</h1> <!-- Change this to your alias or repo name! -->
-<li>Add to <a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://close.cf">Cydia</a></li> <!-- Put your repo URL in REPLACEHERE, remove this comment. -->
-<li>Add to <a class="btn btn-sm btn-default" href="installer://add/https://close.cf">Installer</a></li> <!-- Put your repo URL in REPLACEHERE, remove this comment. -->
-<li>Add to <a class="btn btn-sm btn-default" href="sileo://source/https://close.cf">Sileo</a></li> <!-- Put your repo URL in REPLACEHERE, remove this comment. -->
-<li>Add to <a class="btn btn-sm btn-default" href="zbra://sources/add/https://close.cf">Zebra</a></li> <!-- Put your repo URL in REPLACEHERE, remove this comment. -->
-Created with repo.me | Thank you for using <a class="btn btn-sm btn-default" href="https://github.com/v4lex/repo">Menthe</a> by valex! <!-- This can be removed, but I'd appreciate if this was left or edited to still include the link to repo.me! -->
-</center></pre>
+<!DOCTYPE html>
+<html lang="en">
+
+<!-- Mirrored from repo.bomberfish.ca/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 14 Mar 2023 17:23:53 GMT -->
+<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Repo - bomberfish.ca</title>
+  <link rel="stylesheet" href="../bomberfish.ca/styles.css">
+  <link rel="stylesheet" href="repo.css">
+</head>
+<body>
+  <h1 id="rainbow">The BomberFish Industries repo</h1>
+  <p>A rootless software repository for jailbroken iDevices. Coming soon.</p><br>
+  <a class="pkgmgr" href="sileo://source/https://repo.bomberfish.ca/" target="_blank"><img src="sileo.png" alt="Add to Sileo" height="55" width="55"></a>&nbsp;&nbsp;&nbsp;
+  <a class="pkgmgr" href="zbra://sources/add/https://repo.bomberfish.ca/" target="_blank"><img src="zbra.png" alt="Add to Zebra" height="55" width="55"></a>&nbsp;&nbsp;&nbsp;
+  <a class="pkgmgr" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://repo.bomberfish.ca"><img src="cydia.png" alt="Add to Cydia" height="55" width="55"></a>&nbsp;&nbsp;&nbsp;
+  <a class="pkgmgr" href="installer://add/https://repo.bomberfish.ca/" target="_blank""><img src="installer.png" alt="Add to Installer" height="55" width="55"></a>&nbsp;&nbsp;&nbsp;
+  <!-- TODO: Better Saily icon -->
+  <a class="pkgmgr" href="apt-repo_/https_/repo.bomberfish.ca/index.html" target="_blank""><img src="saily.png" alt="Add to Saily" height="55" width="55"></a>&nbsp;&nbsp;&nbsp;<br><br>
+  <p>Is your package manager not here? just add <code>https://repo.bomberfish.ca</code> to your repo list!</p><br>
+  <p>Huge thanks to the good folks who developed <a href="https://github.com/sukarodo/repo.me">repo.me</a> for the backend which makes this work!</p>
+</body>
+
+<!-- Mirrored from repo.bomberfish.ca/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 14 Mar 2023 17:23:56 GMT -->
+</html>
