--- a/index.html
+++ b/index.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from repo.bomberfish.ca/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 14 Mar 2023 17:23:53 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Repo - bomberfish.ca</title>
-  <link rel="stylesheet" href="../bomberfish.ca/styles.css">
+  <title>Menthe - Repo</title>
+  <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="repo.css">
 </head>
 <body>
   <h1 id="rainbow">The BomberFish Industries repo</h1>
   <p>A rootless software repository for jailbroken iDevices. Coming soon.</p><br>
-  <a class="pkgmgr" href="sileo://source/https://repo.bomberfish.ca/" target="_blank"><img src="sileo.png" alt="Add to Sileo" height="55" width="55"></a>&nbsp;&nbsp;&nbsp;
-  <a class="pkgmgr" href="zbra://sources/add/https://repo.bomberfish.ca/" target="_blank"><img src="zbra.png" alt="Add to Zebra" height="55" width="55"></a>&nbsp;&nbsp;&nbsp;
-  <a class="pkgmgr" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://repo.bomberfish.ca"><img src="cydia.png" alt="Add to Cydia" height="55" width="55"></a>&nbsp;&nbsp;&nbsp;
-  <a class="pkgmgr" href="installer://add/https://repo.bomberfish.ca/" target="_blank""><img src="installer.png" alt="Add to Installer" height="55" width="55"></a>&nbsp;&nbsp;&nbsp;
-  <!-- TODO: Better Saily icon -->
+  <a class="pkgmgr" href="sileo://source/https://close.cf/" target="_blank"><img src="sileo.png" alt="Add to Sileo" height="55" width="55"></a>&nbsp;&nbsp;&nbsp;
+  <a class="pkgmgr" href="zbra://sources/add/https://close.cf/" target="_blank"><img src="zbra.png" alt="Add to Zebra" height="55" width="55"></a>&nbsp;&nbsp;&nbsp;
+  <a class="pkgmgr" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://close.cf"><img src="cydia.png" alt="Add to Cydia" height="55" width="55"></a>&nbsp;&nbsp;&nbsp;
+  <a class="pkgmgr" href="installer://add/https://close.cf/" target="_blank""><img src="installer.png" alt="Add to Installer" height="55" width="55"></a>&nbsp;&nbsp;&nbsp;
   <a class="pkgmgr" href="apt-repo_/https_/repo.bomberfish.ca/index.html" target="_blank""><img src="saily.png" alt="Add to Saily" height="55" width="55"></a>&nbsp;&nbsp;&nbsp;<br><br>
-  <p>Is your package manager not here? just add <code>https://repo.bomberfish.ca</code> to your repo list!</p><br>
-  <p>Huge thanks to the good folks who developed <a href="https://github.com/sukarodo/repo.me">repo.me</a> for the backend which makes this work!</p>
+  <p>Is your package manager not here? just add <code>https://close.cf</code> to your repo list!</p><br>
+  <p>Huge thanks to <a href="https://github.com/sukarodo/repo.me">repo.me</a> for the template which makes this work!</p>
 </body>
 
-<!-- Mirrored from repo.bomberfish.ca/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 14 Mar 2023 17:23:56 GMT -->
+<!-- Thanks to bomberfish.ca. I didn't find any licenses or copyright so I mirrored your site because  didn't like repo.me's style. If I did a wrong action please let me know. Telegram @yqcht -->
 </html>
