--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="repo.css">
 </head>
 <body>
-  <h1 id="rainbow">The BomberFish Industries repo</h1>
+  <h1 id="rainbow">Menthe Jailbroken Repository</h1>
   <p>A rootless software repository for jailbroken iDevices. Coming soon.</p><br>
   <a class="pkgmgr" href="sileo://source/https://close.cf/" target="_blank"><img src="sileo.png" alt="Add to Sileo" height="55" width="55"></a>&nbsp;&nbsp;&nbsp;
   <a class="pkgmgr" href="zbra://sources/add/https://close.cf/" target="_blank"><img src="zbra.png" alt="Add to Zebra" height="55" width="55"></a>&nbsp;&nbsp;&nbsp;
