--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <a class="pkgmgr" href="zbra://sources/add/https://close.cf/" target="_blank"><img src="zbra.png" alt="Add to Zebra" height="55" width="55"></a>&nbsp;&nbsp;&nbsp;
   <a class="pkgmgr" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://close.cf"><img src="cydia.png" alt="Add to Cydia" height="55" width="55"></a>&nbsp;&nbsp;&nbsp;
   <a class="pkgmgr" href="installer://add/https://close.cf/" target="_blank""><img src="installer.png" alt="Add to Installer" height="55" width="55"></a>&nbsp;&nbsp;&nbsp;
-  <a class="pkgmgr" href="apt-repo_/https_/repo.bomberfish.ca/index.html" target="_blank""><img src="saily.png" alt="Add to Saily" height="55" width="55"></a>&nbsp;&nbsp;&nbsp;<br><br>
+  <a class="pkgmgr" href="apt-repo_/https_/close.cf/" target="_blank""><img src="saily.png" alt="Add to Saily" height="55" width="55"></a>&nbsp;&nbsp;&nbsp;<br><br>
   <p>Is your package manager not here? just add <code>https://close.cf</code> to your repo list!</p><br>
   <p>Huge thanks to <a href="https://github.com/sukarodo/repo.me">repo.me</a> for the template which makes this work!</p>
 </body>
