--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Menthe - Repo</title>
+  <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="repo.css">
 </head>
